# skybridge

./: .env.example  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_PLAN.md  README.md  cloudahoy2flysto  docker-compose.yml  firebase.json  firestore.rules  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  cleanup-shell.sh  devcontainer.json  post-create.sh  post-start.sh  post-stop.sh  setup-codex.sh  setup-completion.sh  setup-copilot.sh  setup-history.sh  setup-venv.sh  setup-zsh-autosuggestions.sh  starship.toml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  firebase-deploy.defaults.json
docs/: _index.md  backend-architecture.md  backend-maintenance.md  backend-release-readiness.md  backend-runbook.md  backend.md  cloudahoy-api.md  codebase-overview.md  core-cli.md  deployment-aws.md  flysto-api.md  frontend.md  migrations.md  production-launch-checklist.md  production.md  remarks-tagging.md  research.md  run-checklist.md  testing.md
functions/: .env.example  main.py  requirements.txt
project-management/: PROJECT_PLAN.md
scripts/: assign_aircraft_from_review.py  build-lambda.sh  clean-workspace.sh  cleanup-merged-branches.sh  deploy-prod.sh  diagnose_flysto_api.py  docker-compose.sh  firebase-clear-project.sh  firebase-config.sh  firebase-deploy.sh  firebase-emulator-start.sh  init-dynamodb-local.sh  init-sqs-local.sh  inspect_cloudahoy_api.py  inspect_cloudahoy_debrief.py  inspect_cloudahoy_pagination.py  inspect_flysto_aircraft_create_standard.py  npm-ci-frontend.sh  (+28 more)
(+355 files in other folders)
