[project]
name = "skybridge"
version = "0.1.0"
description = "Migrate CloudAhoy flights to FlySto"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.57.0",
  "fastapi==0.115.11",
  "uvicorn==0.34.0",
  "requests==2.32.5",
  "pyjwt==2.9.0",
  "cryptography==42.0.7",
  "rich==14.2.0",
  "boto3==1.35.99",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
