[project]
name = "skybridge"
version = "0.1.0"
description = "Migrate CloudAhoy flights to FlySto"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.57.0",
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
  "requests==2.32.5",
  "pyjwt==2.10.1",
  "cryptography==46.0.3",
  "rich==14.2.0",
  "google-cloud-firestore==2.23.0",
  "google-cloud-storage==3.8.0",
  "google-cloud-pubsub==2.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
